Fix button overflow

--- a/src/components/Beers/style.scss
+++ b/src/components/Beers/style.scss
@@ -89,3 +89,7 @@
 .buttons-detail {
   margin-top: 8%;
 }
+
+.text-overflow {
+  overflow: hidden;
+}
